fixed z-index in header

--- a/control/figma.css
+++ b/control/figma.css
@@ -14,6 +14,7 @@ body{
 
 header {
     position: fixed;
+    z-index: 1000;
     top: 0;
     width: 100%;
     height: 86px;
